--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
+    "path": "^0.12.7",
     "socket.io": "^2.3.0"
   }
 }
