--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   },
   "homepage": "https://github.com/martendebruijn/real-time-web-her#readme",
   "devDependencies": {
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-terser": "^1.2.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "gulp": "^4.0.2",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7",
     "socket.io": "^2.3.0"
