--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "gulp",
     "start": "node server/server.js",
-    "dev": "gulp watch & nodemon server/server.js"
+    "dev": "gulp watch & nodemon server/server.js",
+    "deploy": "git push heroku master",
+    "logs": "heroku logs --tail"
   },
   "repository": {
     "type": "git",
@@ -19,10 +22,6 @@
   },
   "homepage": "https://github.com/martendebruijn/real-time-web-her#readme",
   "devDependencies": {
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-terser": "^1.2.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
@@ -31,6 +30,10 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-terser": "^1.2.0",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7",
     "socket.io": "^2.3.0"
